--- a/example.ipynb
+++ b/example.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# Initialize the IonQ provider and backend\n",
-    "api_key = \"5lksT0BBqzQ0n72EuQG6emcGzDUUOC4O\"# os.getenv(\"IONQ_API_KEY\") or input(\"Enter your IonQ API key: \")\n",
+    "api_key = os.getenv(\"IONQ_API_KEY\") or input(\"Enter your IonQ API key: \")\n",
     "provider = IonQProvider(token=api_key)\n",
     "backend = provider.get_backend(\"simulator\", gateset=\"native\")"
    ]
